lld/test/error-atom-undefined-wrong-attribue.objtxt
# RUN: not lld-core %s 2> %t.err
# RUN:   FileCheck < %t.err %s

#
# Test that a defined attribute on an undefined atom produces a readable error.
#

---
atoms:
    - name:         foo
      type:         code
      definition:   undefined
  
...


# CHECK: error: Undefined atom 'foo' has attributes only allowed on defined atoms

